--- a/7-Conclusao/capitulo_conclusao.tex
+++ b/7-Conclusao/capitulo_conclusao.tex
@@ -1,10 +1,10 @@
 \chapter{Conclusões}
 
-A principal discussão em um ambiente analítico é a necessidade por desempenho na recuperação de informações para tomada de decisão. Para conseguir alcançar de forma eficiente esse desempenho bancos relacionais são muito utilizados, porém podem trazer alguns problemas de acordo com a modelagem dos dados dos DWs. Para tanto, bancos NoSQL, mais especificamente da classe orientada a colunas, ganham destaque por satisfazerem questões mais complexas em SGBD relacionais, tornando possível a recuperação rápida de dados.
+A principal discussão em um ambiente analítico é a necessidade por desempenho na recuperação de informações para tomada de decisão. Para conseguir alcançar de forma eficiente esse desempenho bancos relacionais são muito utilizados, porém podem trazer alguns problemas de acordo com a modelagem dos dados dos DWs. Para tanto, bancos de dados NoSQL, mais especificamente da classe orientada a colunas, ganham destaque por satisfazerem questões mais complexas em SGBD relacionais, tornando possível a recuperação rápida de dados.
 
 Entre os destaques encontrados em um modelo de SGBD colunar estão (i) a capacidade de escalabilidade horizontal devido ao melhor desempenho sob modelagens denormalizadas no formato \textit{star}, o que faz com que não seja preciso normalizar um modelo a um nível que gere alto grau de acoplamento entre as tabelas do banco, (ii) busca dos atributos requeridos de forma direta, sem precisar processar tuplas inteiras, satisfazendo as requisições de consultas analíticas por poucos atributos, gerando rapidez na recuperação de dados, e (iii) alta capacidade de compressão de dados. Ao realizar a avaliação experimental os dois últimos pontos ficaram bem evidentes.
 
-Desde o carregamento de dados nota-se uma grande diferença entre os SGBD MonetDB e PostgreSQL. O comando \textit{COPY INTO} utilizado pelo MonetDB consegue inserir os dados no SGBD concorrentemente -- um fator que o torna preferível ao invés de vários \textit{INSERT}, por tratar o comando como uma única \textit{query}\footnote{Aqui \textit{query} não significa exatamente uma \textit{consulta}, portanto optou-se por deixar a palavra no inglês por não encontrar uma tradução adequada} independentemente de ter o modo de \textit{auto-commit} das transações ativo ou não. Mesmo que o comando \textit{COPY FROM} do PostgreSQL assim como do MonetDB trate o comando como uma única \textit{query}, o mesmo desempenho não foi atingido. A Tabela \ref{tab:ganho_carregamento} mostra os ganhos do MonetDB em relação ao PostgreSQL no tempo de carregamento. Logo após a inserção de dados também percebe-se um grande diferencial dos bancos colunares: a compressão de dados, uma vez que o MonetDB realiza compressão de \textit{strings} utilizando codificação por dicionário.
+Desde a carga de dados nota-se uma grande diferença entre os SGBD MonetDB e PostgreSQL. O comando \textit{COPY INTO} utilizado pelo MonetDB consegue inserir os dados no SGBD concorrentemente -- um fator que o torna preferível ao invés de vários \textit{INSERT}, por tratar o comando como uma única \textit{query}\footnote{Aqui \textit{query} não significa exatamente uma \textit{consulta}, portanto optou-se por deixar a palavra no inglês por não encontrar uma tradução adequada} independentemente de ter o modo de \textit{auto-commit} das transações ativo ou não. Mesmo que o comando \textit{COPY FROM} do PostgreSQL assim como do MonetDB trate o comando como uma única \textit{query}, o mesmo desempenho não foi atingido. A Tabela \ref{tab:ganho_carregamento} mostra os ganhos do MonetDB em relação ao PostgreSQL no tempo de carregamento. Logo após a inserção de dados também percebe-se um grande diferencial dos bancos colunares: a compressão de dados, uma vez que o MonetDB realiza compressão de \textit{strings} utilizando codificação por dicionário.
 
 \begin{table}[htpb]
     \centering
@@ -27,7 +27,11 @@ Retomando a discussão entre OLAP e OLTP, armazenar os dados de um ambiente tran
 
 Para ambientes transacionais cuja modelagem ainda segue os padrões de normalização o uso de um SGBD como o PostgreSQL continua sendo vantajoso, pois além dos resultados obtidos deve se considerar que um SGBDR preza pela consistência nos dados, e para um sistema transacional que envolva transações bancárias, por exemplo, a consistência é fundamental. Em ambiente analítico é confirmado que um banco colunar traz melhor desempenho para a recuperação de informações e o MonetDB ainda possui a vantagem de utilizar dados em memória. Para que se faça um bom uso da \textit{cache} nesse SGBD é possível aproveitar justamente o fator de consultas analíticas, embora não idênticas, serem similares por simular cenários com agrupamentos e atributos Fato, para realizar um \textit{warm-up} de dados para que estes já estejam em \textit{cache}.
 
-\section{Trabalhos Futuros}
+De maneira geral, a pesquisa corroborou a teoria de que SGBDR atuam melhor sob operações transacionais, e que mesmo em ambiente analítico a modelagem mais normalizada é ideal para esta classe de SGBD. Por não precisarem do mesmo desempenho para recuperação de informações como consultas analíticas, eles podem se ater a consistência de dados e a uma modelagem normalizada, optando por deixar de lado o particionamento horizontal dos dados, mesmo que isso degrade a disponibilidade destes ao ocorrer uma queda de servidor.
+
+Para ambientes analíticos, reforça-se que um SGBDC é uma ótima escolha na recuperação de dados. Todos seus atributos estarão armazenados juntos, as chances de conseguir uma alta compressão são maiores e a reconstrução de tuplas, dependendo de qual for sua implementação, é feita de forma mais inteligente que em SGBDR. Por serem uma classe de SGBD NoSQL, garantem alta disponibilidade e são capazes de realizar particionamento horizontal, por isso o desempenho é melhor em modelagens denormalizadas, aumentando a eficiência na recuperação de dados em um DW.
+
+% \section{Trabalhos Futuros}
 
 Como continuidade para a pesquisa sugere-se:
 
