--- a/ModeloTCC.tex
+++ b/ModeloTCC.tex
@@ -14,6 +14,8 @@
 \usepackage{vmargin}
 \usepackage{bbm}
 \usepackage{ams}
+\usepackage{caption}
+% \usepackage[footfont=Large]{floatrow}
 \usepackage[]{graphicx}	
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{algorithmic}
@@ -179,9 +181,10 @@
 % Inclus?o dos capítulos
 \oneandhalfspacing
 \include{1-introducao/capitulo_intro}
-\include{2-DW/capitulo_dw}
-\include{3-SGBD/capitulo_sgbd}
-\include{4-NoSQL/capitulo_nosql}
+% \include{2-DW/capitulo_dw}
+% \include{3-SGBD/capitulo_sgbd}
+% \include{4-NoSQL/capitulo_nosql}
+\include{3-FUNDAMENTOS/capitulo_fundamentos}
 \include{5-TPCH/capitulo_tpch}
 \include{6-Experimento/capitulo_experimento}
 \include{7-Conclusao/capitulo_conclusao}
