--- a/Referencias.bib
+++ b/Referencias.bib
@@ -192,6 +192,14 @@ month={Oct},}
 	note = {Acessado em: 12 de agosto de 2017}
 }
 
+@MISC{tpc2018resultados,
+  title = {TPC-H - Top Ten Performance Results},
+  organization = {Transaction Processing Performance Council},
+  year = 2018,
+  url = {http://www.tpc.org/tpch/results/tpch\_perf\_results.asp},
+  note = {Acessado em: 14 de junho de 2018}
+}
+
 @article{sen2005comparison,
   title={A comparison of data warehousing methodologies},
   author={Sen, Arun and Sinha, Atish P},
