--- a/iniciais/agradece.tex
+++ b/iniciais/agradece.tex
@@ -8,8 +8,24 @@
 \fontsize{14}{14}
 \textbf{AGRADECIMENTOS}
 \end{center}
-
 \vspace{2cm}
 
+Agradeço especialmente à minha mãe, Deisy Ayres Torres, por ter sido mãe, pai, amiga, em todos os momentos da minha vida, por ter me feito rir, me aconselhado, acreditado em mim, me apoiado em decisões e escolhas, e ensinado que tenho que aproveitar os momentos que vivo antes que eles passem. Não consigo expressar minha gratidão por ti, e pela pessoa fofa, guerreira, pé no chão, e maravilhosa que você é. Meu principal agradecimento vai à ti, pois vou levar toda minha admiração e tudo que já passamos e vamos passar ainda comigo. Amo muito você!
+
+Aos meus avós, Divo Ayres Torres e Evanir Piassa Torres, pelos conselhos e tudo que já fizeram por mim, são como pais para mim e admiro demais vocês e tudo que viveram para chegar aonde chegaram, amo demais vocês e obrigada por também terem cuidado de mim -- vô, obrigada por me ensinar a ser gremista, vó, obrigada pelos cri-cris!
+
+Aos meus tios, Vinicius, por ter me apresentado o maravilhoso mundo dos jogos quando era criança, Jeferson, pelas risadas nos almoços, e Daniely, que desde criança já amei e considerei da família. Obrigada pelo apoio e por tudo que já fizeram por mim.
+
+Agradeço também em especial ao meu orientador Clodis Boscarioli, por ter me orientado neste TCC, pelo conhecimento repassado, por ter influenciado no meu gosto por Banco de Dados e por isso me dado um norte na faculdade, pelos momentos dentro do Grupo PETComp, além de demais conselhos fora deste projeto.
+
+À professora Adriana Postal, pelas orientações divertidas de Iniciação Científica correndo atrás de robôs, e conhecimento repassado, além das risadas no LRI, das conversas à toa e conselhos. Ao meu co-orientador Gustavo Rezende Krüger e ao professor Marcio Seiji Oyamada, pelos vários \textit{mind blown} durante as orientações deste TCC e por sanar minhas dúvidas sobre diversos assuntos. 
+
+Ao Grupo PETComp, que me ensinou a como lidar com trabalhos em grupo, a conhecer pessoas diferentes, exercer projetos diferentes, passar a levar alguns assuntos mais a sério, e a me divertir principalmente com as pérolas do "txt do PET".
+
+À minha melhor amiga Ana Luiza da Rocha Herrmann por não desistir de mim mesmo com as piadas e trocadilhos infames, e por todas as vezes que passamos o dia e viramos a noite programando. Pelas saídas para beber, filosofar e conversar sobre a vida e a faculdade, conselhos, e, principalmente, comer e assistir \textit{Friends} e \textit{Grey's Anatomy}. Obrigada por tudo, cara!
+
+Aos grandes amigos Bruno e João, agradeço pelas músicas estranhas e que colam na cabeça, pelos trabalhos que já fizemos juntos, pelos momentos no laboratório e pelos \textit{memes} do "Bruno 110\% com raiva". Também ao meu amigo Felipe Sabadin, pelos vários anos de amizade e risadas, que até hoje se mantém.
+
+Por fim, agradeço a todos que contribuíram de alguma forma para a minha formação dentro e fora da universidade, todos foram especiais em algum momento para mim.
 
 
