--- a/iniciais/aprova.tex
+++ b/iniciais/aprova.tex
@@ -28,7 +28,7 @@ Prof. Dr. Clodis Boscarioli (Orientador)\\
 Colegiado de Ciência da Computação, UNIOESTE\\
 \vspace{1cm}
 \rule{6cm}{0.01mm}\\
-Gustavo Rezende Krüger (Co-orientador)\\
+Esp. Gustavo Rezende Krüger (Co-orientador)\\
 Orbit Sistemas\\
 \vspace{1cm}
 \rule{6cm}{0.01mm}\\
@@ -36,7 +36,7 @@ Prof. Dr. Marcio Seiji Oyamada\\
 Colegiado de Ciência da Computação, UNIOESTE\\
 \vspace{1cm}
 \rule{6cm}{0.01mm}\\
-Bruno Eduardo Soares\\
+Esp. Bruno Eduardo Soares\\
 Origammi Soluções Digitais\\
 \end{center}
 \end{minipage}
