--- a/iniciais/dedica.tex
+++ b/iniciais/dedica.tex
@@ -13,6 +13,6 @@
 
 \begin{flushright}
 \begin{minipage}[10cm] {8.5cm}
-\emph {}
+\emph {Aos meus melhores mestres jedi: minha mãe, Deisy Ayres Torres, e meus avós Divo Ayres Torres e Evanir Piassa Torres. }
 \end{minipage}
 \end{flushright}
