--- a/iniciais/sumario.tex
+++ b/iniciais/sumario.tex
@@ -16,26 +16,29 @@
 \addcontentsline{toc}{chapter}{Lista de Abreviaturas e Siglas}
 \chapter*{Lista de Abreviaturas e Siglas}
 \begin{tabular}{ll}
-	TPC & \textit{Transaction Processing Performance Council}\\
-	TPC-H & TPC \textit{Benchmark} H\\
-	DSS & \textit{Decision Support Systems}\\
-	DW & \textit{Data Warehouse}\\
-	OLAP & \textit{On-Line Analytical Processing}\\
-	OLTP & \textit{On-Line Transaction Processing}\\
-	SGBD & Sistemas Gerenciadores de Banco de Dados\\
-	SGBDR & Sistemas Gerenciadores de Banco de Dados Relacional\\
-	SGBDC & Sistemas Gerenciadores de Banco de Dados Colunar \\
-	SF & \textit{Scale Factor}\\
-	PK & \textit{Primary Key}\\
-	FK & \textit{Foreign Key}\\
-	RF & \textit{Refresh Function} \\
-	GB & Gigabyte \\
-	TB & Terabyte \\
-	CAP & \textit{Consistency, Availability, Partition tolerance} \\
-	BASE & \textit{Basically Available, Soft state, Eventual consistency} \\
-	ACID & \textit{Atomicity, Consistency, Isolation, Durability} \\
-	EM & \textit{Early Materialization} \\
-	LM & \textit{Late Materialization} \\
+ACID & \textit{Atomicity, Consistency, Isolation, Durability} \\
+BASE & \textit{Basically Available, Soft state, Eventual consistency} \\
+CAP & \textit{Consistency, Availability, Partition tolerance} \\
+DSS & \textit{Decision Support Systems}\\
+DW & \textit{Data Warehouse}\\
+EM & \textit{Early Materialization} \\
+ETL & \textit{Extract, Transformation, Load} \\
+FK & \textit{Foreign Key}\\
+GB & Gigabyte \\
+LM & \textit{Late Materialization} \\
+MB & Megabyte \\
+OLAP & \textit{On-Line Analytical Processing}\\
+OLTP & \textit{On-Line Transaction Processing}\\
+PK & \textit{Primary Key}\\
+RF & \textit{Refresh Function} \\
+SF & \textit{Scale Factor}\\
+SGBD & Sistemas Gerenciadores de Banco de Dados\\
+SGBDC & Sistemas Gerenciadores de Banco de Dados Colunar \\
+SGBDR & Sistemas Gerenciadores de Banco de Dados Relacional\\
+TB & Terabyte \\
+TPC-H & TPC \textit{Benchmark} H \\
+TPC & \textit{Transaction Processing Performance Council}\\
+
 \end{tabular}
 
 \pagebreak
