--- a/apend/apendice2.tex
+++ b/apend/apendice2.tex
@@ -4,106 +4,106 @@
 \label{queries_1}
 
 
-São apresentadas aqui as 15 consultas realizadas no Ambiente \textit{snowflake}, cada qual com sua questão de negócio brevemente explicada.
+São apresentadas aqui as 22 consultas do ambiente \textit{snowflake}, cada qual com sua questão de negócio brevemente explicada.
 
 \begin{enumerate}
 
 %--------------------------------------1
-% \item Consulta de Relatório de Resumo de Preços \\
-% 	Emite um relatório com o resumo de preços de todos os itens enviados em uma certa data. Esta data corresponde a 60-120 dias antes da maior data de envio contida no banco de dados. 
+\item[Q1 --] Consulta de Relatório de Resumo de Preços \\
+	Emite um relatório com o resumo de preços de todos os itens enviados em uma certa data. Esta data corresponde a 60-120 dias antes da maior data de envio contida no banco de dados. 
     
-% \begin{tabular}{ll}
-% 	Parâmetro de Substituição & Valor\\
-% 	DELTA & 90\\
-% \end{tabular}
+\begin{tabular}{ll}
+	Parâmetro de Substituição & Valor\\
+	DELTA & 90\\
+\end{tabular}
     
-% 	\begin{lstlisting}[language=SQL]
-% select
-% 	l_returnflag,
-% 	l_linestatus,
-% 	sum(l_quantity) as sum_qty,
-% 	sum(l_extendedprice) as sum_base_price,
-% 	sum(l_extendedprice * (1 - l_discount)) as sum_disc_price,
-% 	sum(l_extendedprice * (1 - l_discount) * (1 + l_tax)) as sum_charge,
-% 	avg(l_quantity) as avg_qty,
-% 	avg(l_extendedprice) as avg_price,
-% 	avg(l_discount) as avg_disc,
-% 	count(*) as count_order
-% from
-% 	lineitem
-% where
-% 	l_shipdate <= date '1998-12-01' - interval '[DELTA]' day (3)
-% group by
-% 	l_returnflag,
-% 	l_linestatus
-% order by
-% 	l_returnflag,
-% 	l_linestatus;
+	\begin{lstlisting}[language=SQL]
+select
+	l_returnflag,
+	l_linestatus,
+	sum(l_quantity) as sum_qty,
+	sum(l_extendedprice) as sum_base_price,
+	sum(l_extendedprice * (1 - l_discount)) as sum_disc_price,
+	sum(l_extendedprice * (1 - l_discount) * (1 + l_tax)) as sum_charge,
+	avg(l_quantity) as avg_qty,
+	avg(l_extendedprice) as avg_price,
+	avg(l_discount) as avg_disc,
+	count(*) as count_order
+from
+	lineitem
+where
+	l_shipdate <= date '1998-12-01' - interval '[DELTA]' day (3)
+group by
+	l_returnflag,
+	l_linestatus
+order by
+	l_returnflag,
+	l_linestatus;
 	
-% 	\end{lstlisting}
+	\end{lstlisting}
 
 % %--------------------------------------2
-% \item Consulta de Fornecedor de Custo Mínimo
+\item[Q2 --] Consulta de Fornecedor de Custo Mínimo
 
-% 	Encontra o fornecedor que pode fornecer um produto com o menor custo em uma dada região.
+Encontra o fornecedor que pode fornecer um produto com o menor custo em uma dada região.
 	
-% \begin{tabular}{ll}
-% 	Parâmetro de Substituição & Valor\\
-% 	SIZE & 15\\
-% 	TYPE & BRASS\\
-% 	REGION & EUROPE\\
-% \end{tabular}
+\begin{tabular}{ll}
+	Parâmetro de Substituição & Valor\\
+	SIZE & 15\\
+	TYPE & BRASS\\
+	REGION & EUROPE\\
+\end{tabular}
 
-% 	\begin{lstlisting}[language=SQL]
-% select
-% 	s_acctbal,
-% 	s_name,
-% 	n_name,
-% 	p_partkey,
-% 	p_mfgr,
-% 	s_address,
-% 	s_phone,
-% 	s_comment
-% from
-% 	part,
-% 	supplier,
-% 	partsupp,
-% 	nation,
-% 	region
-% where
-% 	p_partkey = ps_partkey
-% 	and s_suppkey = ps_suppkey
-% 	and p_size = [SIZE]
-% 	and p_type like '%[TYPE]'
-% 	and s_nationkey = n_nationkey
-% 	and n_regionkey = r_regionkey
-% 	and r_name = '[REGION]'
-% 	and ps_supplycost = (
-% 		select
-% 			min(ps_supplycost)
-% 		from
-% 			partsupp,
-% 			supplier,
-% 			nation,
-% 			region
-% 		where
-% 			p_partkey = ps_partkey
-% 			and s_suppkey = ps_suppkey
-% 			and s_nationkey = n_nationkey
-% 			and n_regionkey = r_regionkey
-% 			and r_name = '[REGION]'
-% 	)
-% order by
-% 	s_acctbal desc,
-% 	n_name,
-% 	s_name,
-% 	p_partkey;
-% set rowcount 100
-% go
-% 	\end{lstlisting}
+	\begin{lstlisting}[language=SQL]
+select
+	s_acctbal,
+	s_name,
+	n_name,
+	p_partkey,
+	p_mfgr,
+	s_address,
+	s_phone,
+	s_comment
+from
+	part,
+	supplier,
+	partsupp,
+	nation,
+	region
+where
+	p_partkey = ps_partkey
+	and s_suppkey = ps_suppkey
+	and p_size = [SIZE]
+	and p_type like '%[TYPE]'
+	and s_nationkey = n_nationkey
+	and n_regionkey = r_regionkey
+	and r_name = '[REGION]'
+	and ps_supplycost = (
+		select
+			min(ps_supplycost)
+		from
+			partsupp,
+			supplier,
+			nation,
+			region
+		where
+			p_partkey = ps_partkey
+			and s_suppkey = ps_suppkey
+			and s_nationkey = n_nationkey
+			and n_regionkey = r_regionkey
+			and r_name = '[REGION]'
+	)
+order by
+	s_acctbal desc,
+	n_name,
+	s_name,
+	p_partkey;
+set rowcount 100
+go
+	\end{lstlisting}
 
 %--------------------------------------3
-\item Consulta de Prioridade de Envio
+\item[Q3 --] Consulta de Prioridade de Envio
 	
 	Retorna a prioridade de envio dos pedidos com a maior receita entre aqueles que ainda não foram enviados em uma determinada data.
 	
@@ -141,42 +141,42 @@ go
 	\end{lstlisting}
 	
 %--------------------------------------4
-% \item Consulta de Verificação de Prioridade de Pedido
+\item[Q4 --] Consulta de Verificação de Prioridade de Pedido
 		
-% 	Faz a contagem do número de pedidos solicitados em um dado trimestre de um determinado ano no qual pelo menos um item foi recebido pelo cliente após a data de entrega.
+	Faz a contagem do número de pedidos solicitados em um dado trimestre de um determinado ano no qual pelo menos um item foi recebido pelo cliente após a data de entrega.
 	
-% \begin{tabular}{ll}
-% 	Parâmetro de Substituição & Valor\\
-% 	DATE & 1993-07-01\\
-% \end{tabular}
+\begin{tabular}{ll}
+	Parâmetro de Substituição & Valor\\
+	DATE & 1993-07-01\\
+\end{tabular}
 
-% 	\begin{lstlisting}[language=SQL]
-% select
-% 	o_orderpriority,
-% 	count(*) as order_count
-% from
-% 	orders
-% where
-% 	o_orderdate >= date '[DATE]'
-% 	and o_orderdate < date '[DATE]' + interval '3' month
-% 	and exists (
-% 		select
-% 			*
-% 		from
-% 			lineitem
-% 		where
-% 			l_orderkey = o_orderkey
-% 			and l_commitdate < l_receiptdate
-% 	)
-% group by
-% 	o_orderpriority
-% order by
-% 	o_orderpriority;
+	\begin{lstlisting}[language=SQL]
+select
+	o_orderpriority,
+	count(*) as order_count
+from
+	orders
+where
+	o_orderdate >= date '[DATE]'
+	and o_orderdate < date '[DATE]' + interval '3' month
+	and exists (
+		select
+			*
+		from
+			lineitem
+		where
+			l_orderkey = o_orderkey
+			and l_commitdate < l_receiptdate
+	)
+group by
+	o_orderpriority
+order by
+	o_orderpriority;
 	
-% 	\end{lstlisting}
+	\end{lstlisting}
 
 %--------------------------------------5
-\item Consulta de Volume do Fornecedor Local
+\item[Q5 --] Consulta de Volume do Fornecedor Local
 	
 	Lista para cada nação em uma dada região o volume de receita originado de uma transação na qual cliente e fornecedor eram daquela nação.
 	
@@ -215,7 +215,7 @@ order by
 	\end{lstlisting}
 	
 %--------------------------------------6
-\item Previsão de Mudança de Receita
+\item[Q6 --] Previsão de Mudança de Receita
 	
 	Informa o quanto a receita pode aumentar eliminando alguns descontos em um dado ano.
 	
@@ -240,7 +240,7 @@ where
 	\end{lstlisting}
 	
 %--------------------------------------7
-\item Consulta de Quantidade de Envio
+\item[Q7 --] Consulta de Quantidade de Envio
 
     Determina o valor de bens enviados entre nações para auxiliar na renegociação de contratos de envio.
     
@@ -294,7 +294,7 @@ order by
 	\end{lstlisting}
 
 %--------------------------------------8
-\item Consulta de Quota de Mercado Nacional
+\item[Q8 --] Consulta de Quota de Mercado Nacional
 
     Determina quanto a quota de mercado de uma dada nação em uma dada região mudou em dois anos para um determinado tipo de peça.
     
@@ -348,7 +348,7 @@ order by
 	\end{lstlisting}
 
 %--------------------------------------9
-\item Consulta ao Lucro de um Tipo de Produto
+\item[Q9 --] Consulta ao Lucro de um Tipo de Produto
 
     Encontra para cada nação em cada ano o lucro de todas as peças pedidas naquele ano contendo uma substring específica em seus nomes que foram preenchidos por um fornecedor naquela nação.
     
@@ -395,7 +395,7 @@ order by
 	\end{lstlisting}
 
 %--------------------------------------10
-\item Consulta de Relatório de Itens Retornados
+\item[Q10 --] Consulta de Relatório de Itens Retornados
 
     Retorna os 20 principais clientes que podem estar tendo problemas com peças que foram enviadas a eles em um dado trimestre.
     
@@ -441,7 +441,7 @@ go
 	\end{lstlisting}
 
 %--------------------------------------11
-\item Consulta a Identificação de Estoques Importantes
+\item[Q11 --] Consulta a Identificação de Estoques Importantes
     
     Avalia de todos os estoques de fornecedores disponíveis em uma dada nação as peças com uma percentagem significativa do total de peças disponíveis.
     
@@ -483,7 +483,7 @@ order by
 	\end{lstlisting}
 
 %--------------------------------------12
-\item Consulta a Modos de Envio e Prioridade de Pedidos
+\item[Q12 --] Consulta a Modos de Envio e Prioridade de Pedidos
 
     Determina quando selecionar modos de envio mais baratos afeta negativamente pedidos com alta prioridade.
     
@@ -527,7 +527,7 @@ order by
 	\end{lstlisting}
 	
 %--------------------------------------13
-\item Consulta à Distribuição de Clientes
+\item[Q13 --] Consulta à Distribuição de Clientes
 
 Determina a distribuição de clientes pelo número de pedidos que eles fizeram.
 
@@ -562,7 +562,7 @@ order by
 	\end{lstlisting}
 
 %--------------------------------------14
-\item Consulta aos Efeitos de Promoção
+\item[Q14 --] Consulta aos Efeitos de Promoção
 
 Informa o retorno de mercado a uma propaganda, como um comercial de televisão ou uma campanha especial.
 
@@ -589,54 +589,54 @@ where
 	\end{lstlisting}
 
 %--------------------------------------15
-% \item Consulta de Fornecedor Principal
+\item[Q15 --] Consulta de Fornecedor Principal
 
-% Encontra o fornecedor que mais contribuiu com a receita total de peças enviadas durante um dado trimestre de um ano.
+Encontra o fornecedor que mais contribuiu com a receita total de peças enviadas durante um dado trimestre de um ano.
 
-% \begin{tabular}{ll}
-% 	Parâmetro de Substituição & Valor\\
-% 	DATE & 1996-01-01\\
-% \end{tabular}
+\begin{tabular}{ll}
+	Parâmetro de Substituição & Valor\\
+	DATE & 1996-01-01\\
+\end{tabular}
 
-% 	\begin{lstlisting}[language=SQL]
-% create view revenue[STREAM_ID] (supplier_no, total_revenue) as
-% 	select
-% 		l_suppkey,
-% 		sum(l_extendedprice * (1 - l_discount))
-% 	from
-% 		lineitem
-% 	where
-% 		l_shipdate >= date '[DATE]'
-% 		and l_shipdate < date '[DATE]' + interval '3' month
-% 	group by
-% 		l_suppkey;
+	\begin{lstlisting}[language=SQL]
+create view revenue[STREAM_ID] (supplier_no, total_revenue) as
+	select
+		l_suppkey,
+		sum(l_extendedprice * (1 - l_discount))
+	from
+		lineitem
+	where
+		l_shipdate >= date '[DATE]'
+		and l_shipdate < date '[DATE]' + interval '3' month
+	group by
+		l_suppkey;
 
-% select
-% 	s_suppkey,
-% 	s_name,
-% 	s_address,
-% 	s_phone,
-% 	total_revenue
-% from
-% 	supplier,
-% 	revenue[STREAM_ID]
-% where
-% 	s_suppkey = supplier_no
-% 	and total_revenue = (
-% 		select
-% 			max(total_revenue)
-% 		from
-% 			revenue[STREAM_ID]
-% 	)
-% order by
-% 	s_suppkey;
+select
+	s_suppkey,
+	s_name,
+	s_address,
+	s_phone,
+	total_revenue
+from
+	supplier,
+	revenue[STREAM_ID]
+where
+	s_suppkey = supplier_no
+	and total_revenue = (
+		select
+			max(total_revenue)
+		from
+			revenue[STREAM_ID]
+	)
+order by
+	s_suppkey;
 
-% drop view revenue[STREAM_ID];
+drop view revenue[STREAM_ID];
 
-% 	\end{lstlisting}
+	\end{lstlisting}
 
 %--------------------------------------16
-\item Consulta à Relação \textit{Part/Supplier}
+\item[Q16 --] Consulta à Relação \textit{Part/Supplier}
 
 Descobre quantos fornecedores podem fornecer peças com determinados atributos requeridos por um cliente. 
 
@@ -689,40 +689,40 @@ order by
 	\end{lstlisting}
 
 %--------------------------------------17
-% \item Consulta a Receita de Pedidos de Pequenas Quantidades
+\item[Q17 --] Consulta a Receita de Pedidos de Pequenas Quantidades
 
-% Determina quanto de receita seria perdido se não fossem mais feitos pedidos para quantidades pequenas de certas peças.
+Determina quanto de receita seria perdido se não fossem mais feitos pedidos para quantidades pequenas de certas peças.
 
-% \begin{tabular}{ll}
-% 	Parâmetro de Substituição & Valor\\
-% 	BRAND & Brand$\#$23\\
-% 	TYPE & MEDIUM POLISHED \\
-% 	CONTAINER & MED BOX \\
-% \end{tabular}
+\begin{tabular}{ll}
+	Parâmetro de Substituição & Valor\\
+	BRAND & Brand$\#$23\\
+	TYPE & MEDIUM POLISHED \\
+	CONTAINER & MED BOX \\
+\end{tabular}
 
-% 	\begin{lstlisting}[language=SQL]
-% select
-% 	sum(l_extendedprice) / 7.0 as avg_yearly
-% from
-% 	lineitem,
-% 	part
-% where
-% 	p_partkey = l_partkey
-% 	and p_brand = '[BRAND]'
-% 	and p_container = '[CONTAINER]'
-% 	and l_quantity < (
-% 		select
-% 			0.2 * avg(l_quantity)
-% 		from
-% 			lineitem
-% 		where
-% 			l_partkey = p_partkey
-% 	);
+	\begin{lstlisting}[language=SQL]
+select
+	sum(l_extendedprice) / 7.0 as avg_yearly
+from
+	lineitem,
+	part
+where
+	p_partkey = l_partkey
+	and p_brand = '[BRAND]'
+	and p_container = '[CONTAINER]'
+	and l_quantity < (
+		select
+			0.2 * avg(l_quantity)
+		from
+			lineitem
+		where
+			l_partkey = p_partkey
+	);
 	
-% 	\end{lstlisting}
+	\end{lstlisting}
 
 %--------------------------------------18
-\item Consulta a Grandes Volumes de Clientes
+\item[Q18 --] Consulta a Grandes Volumes de Clientes
 
 Classifica os 100 principais clientes que já realizaram grandes quantidades de pedidos. 
 
@@ -768,7 +768,7 @@ order by
 	\end{lstlisting}
 	
 %--------------------------------------19
-\item Consulta a Desconto de Receita
+\item[Q19 --] Consulta a Desconto de Receita
 
 Encontra o desconto bruto de todos os pedidos para três diferentes tipos de peças que foram enviadas por via aérea e entregues pessoalmente.
 
@@ -822,114 +822,114 @@ where
 	\end{lstlisting}
 
 %--------------------------------------20
-% \item Consulta a Potenciais Promoções de Partes
+\item[Q20 --] Consulta a Potenciais Promoções de Partes
 
-% Identifica os fornecedores de uma nação que possuem uma dada peça em excesso, que podem ser candidatas a uma oferta promocional.
+Identifica os fornecedores de uma nação que possuem uma dada peça em excesso, que podem ser candidatas a uma oferta promocional.
 
-% \begin{tabular}{ll}
-% 	Parâmetro de Substituição & Valor\\
-% 	COLOR & forest\\
-% 	DATE & 1994-01-01\\
-% 	NATION & CANADA\\
-% \end{tabular}
+\begin{tabular}{ll}
+	Parâmetro de Substituição & Valor\\
+	COLOR & forest\\
+	DATE & 1994-01-01\\
+	NATION & CANADA\\
+\end{tabular}
 
-% 	\begin{lstlisting}[language=SQL]
-% select
-% 	s_name,
-% 	s_address
-% from
-% 	supplier,
-% 	nation
-% where
-% 	s_suppkey in (
-% 	select
-% 		ps_suppkey
-% 	from
-% 		partsupp
-% 	where
-% 		ps_partkey in (
-% 			select
-% 				p_partkey
-% 			from
-% 				part
-% 			where
-% 				p_name like '[COLOR]%'
-% 		)
-% 		and ps_availqty > (
-% 			select
-% 				0.5 * sum(l_quantity)
-% 			from
-% 				lineitem
-% 			where
-% 				l_partkey = ps_partkey
-% 				and l_suppkey = ps_suppkey
-% 				and l_shipdate >= date '[DATE]'
-% 				and l_shipdate < date '[DATE]' + interval '1' year
-% 		)
-% 	)
-% 	and s_nationkey = n_nationkey
-% 	and n_name = '[NATION]'
-% order by
-% 	s_name;
+	\begin{lstlisting}[language=SQL]
+select
+	s_name,
+	s_address
+from
+	supplier,
+	nation
+where
+	s_suppkey in (
+	select
+		ps_suppkey
+	from
+		partsupp
+	where
+		ps_partkey in (
+			select
+				p_partkey
+			from
+				part
+			where
+				p_name like '[COLOR]%'
+		)
+		and ps_availqty > (
+			select
+				0.5 * sum(l_quantity)
+			from
+				lineitem
+			where
+				l_partkey = ps_partkey
+				and l_suppkey = ps_suppkey
+				and l_shipdate >= date '[DATE]'
+				and l_shipdate < date '[DATE]' + interval '1' year
+		)
+	)
+	and s_nationkey = n_nationkey
+	and n_name = '[NATION]'
+order by
+	s_name;
 	
-% 	\end{lstlisting}
+	\end{lstlisting}
 
 % %--------------------------------------21
-% \item Consulta a Fornecedores que Mantiveram Pedidos em Espera
+\item[Q21 --] Consulta a Fornecedores que Mantiveram Pedidos em Espera
 
-% Identifica fornecedores que não puderam enviar peças pedidas em um tempo hábil.
+Identifica fornecedores que não puderam enviar peças pedidas em um tempo hábil.
 
-% \begin{tabular}{ll}
-% 	Parâmetro de Substituição & Valor\\
-% 	NATION & SAUDI ARABIA\\
-% \end{tabular}
+\begin{tabular}{ll}
+	Parâmetro de Substituição & Valor\\
+	NATION & SAUDI ARABIA\\
+\end{tabular}
 
-% 	\begin{lstlisting}[language=SQL]
-% select
-% 	s_name,
-% 	count(*) as numwait
-% from
-% 	supplier,
-% 	lineitem l1,
-% 	orders,
-% 	nation
-% where
-% 	s_suppkey = l1.l_suppkey
-% 	and o_orderkey = l1.l_orderkey
-% 	and o_orderstatus = 'F'
-% 	and l1.l_receiptdate > l1.l_commitdate
-% 	and exists (
-% 		select
-% 			*
-% 		from
-% 			lineitem l2
-% 		where
-% 			l2.l_orderkey = l1.l_orderkey
-% 			and l2.l_suppkey <> l1.l_suppkey
-% 	)
-% 	and not exists (
-% 		select
-% 			*
-% 		from
-% 			lineitem l3
-% 		where
-% 			l3.l_orderkey = l1.l_orderkey
-% 			and l3.l_suppkey <> l1.l_suppkey
-% 			and l3.l_receiptdate > l3.l_commitdate
-% 	)
-% 	and s_nationkey = n_nationkey
-% 	and n_name = '[NATION]'
-% group by
-% 	s_name
-% order by
-% 	numwait desc,
-% 	s_name;
-% set rowcount 100
-% go
-% 	\end{lstlisting}
+	\begin{lstlisting}[language=SQL]
+select
+	s_name,
+	count(*) as numwait
+from
+	supplier,
+	lineitem l1,
+	orders,
+	nation
+where
+	s_suppkey = l1.l_suppkey
+	and o_orderkey = l1.l_orderkey
+	and o_orderstatus = 'F'
+	and l1.l_receiptdate > l1.l_commitdate
+	and exists (
+		select
+			*
+		from
+			lineitem l2
+		where
+			l2.l_orderkey = l1.l_orderkey
+			and l2.l_suppkey <> l1.l_suppkey
+	)
+	and not exists (
+		select
+			*
+		from
+			lineitem l3
+		where
+			l3.l_orderkey = l1.l_orderkey
+			and l3.l_suppkey <> l1.l_suppkey
+			and l3.l_receiptdate > l3.l_commitdate
+	)
+	and s_nationkey = n_nationkey
+	and n_name = '[NATION]'
+group by
+	s_name
+order by
+	numwait desc,
+	s_name;
+set rowcount 100
+go
+	\end{lstlisting}
 
 %--------------------------------------22
-\item Consulta a Oportunidades de Vendas Globais
+\item[Q22 --] Consulta a Oportunidades de Vendas Globais
 
 Conta quantos clientes de determinados países não realizaram pedidos durante sete anos, porém têm chances de realizar um pedido.
 
